// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.std.grpc.deadlines;

option go_package = "namespacelabs.dev/foundation/std/grpc/deadlines";

message Deadline {
    repeated Configuration configuration = 1;

    message Configuration {
        string service_name     = 1;
        string method_name      = 2;
        float  maximum_deadline = 3;
    }
}